[gd_scene load_steps=2 format=3 uid="uid://djhr3serdwvd0"]

[ext_resource type="Script" path="res://addons/popochiu/editor/dialogue_graph/dialogue_option.gd" id="1_2t8lu"]

[node name="DialogueOption" type="HBoxContainer"]
offset_right = 79.0
offset_bottom = 40.0
script = ExtResource("1_2t8lu")

[node name="Text" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter option text here"

[connection signal="focus_exited" from="Text" to="." method="_on_text_focus_exited"]
[connection signal="text_changed" from="Text" to="." method="_on_text_changed"]
